fixed layout except for tile misalignment

--- a/src/app.css
+++ b/src/app.css
@@ -5,22 +5,20 @@
   width: 100%;
   height: 100vh;
   max-height: 100vh;
+  max-height: 100vh;
   background: white;
   font-size: 18px;
 }
 
 .board {
-  position: absolute;
-  left: 50%;
-  top: 50px;
+  display: block;
   width: 91px;
-  /* max-width: 91px; */
+  margin: 0 auto;
   text-align: 'center';
-  transform: translateX(-50%);
 }
 
 .board-title {
-  margin: 0;
+  margin: 10px;
   padding: 10px;
   font-size: 22px;
   font-weight:  400;
@@ -49,7 +47,12 @@
   transition: .15s ease-in-out;
 }
 
-.restart-btn {
-  text-align: center;
+.winner-text {
   display: block;
+  text-align: center;
+}
+.restart-btn {
+  display: block;
+  text-align: center;
+  margin: 20px auto;
 }
